fix: standardize build scripts to use npm instead of pnpm for consistency

--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc",
-    "prebuild": "jayjs build --prepare && pnpm run build:css",
+    "prebuild": "jayjs build --prepare && npm run build:css",
     "build:css": "tailwindcss -i ./src/styles/globals.css -o ./dist/transformed/styles/globals.css",
     "postbuild": "jayjs build --static",
     "preview": "vite preview",
@@ -26,6 +26,5 @@
     "tailwindcss": "^4.0.3",
     "typescript": "latest",
     "vite": "^6.0.11"
-  },
-  "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771"
+  }
 }
