refactor: update publish scripts to use nx commands for consistency

--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
     "build:cli": "nx build @jay-js/cli",
     "build:jsx": "nx build @jay-js/jsx",
     "build:static": "nx build @jay-js/static",
-    "pub:all": "npm run pub:cli && npm run pub:system && npm run pub:ui && npm run pub:jsx && npm run pub:static",
-    "pub:cli": "cd packages/cli/dist && npm publish --access public",
-    "pub:system": "cd packages/system/dist && npm publish --access public",
-    "pub:ui": "cd packages/ui/dist && npm publish --access public",
-    "pub:jsx": "cd packages/jsx/dist && npm publish --access public",
-    "pub:static": "cd packages/static/dist && npm publish --access public",
+    "pub:all": "nx run-many -t publish --all",
+    "pub:cli": "nx run @jay-js/cli:publish",
+    "pub:system": "nx run @jay-js/system:publish",
+    "pub:ui": "nx run @jay-js/ui:publish",
+    "pub:jsx": "nx run @jay-js/jsx:publish",
+    "pub:static": "nx run @jay-js/static:publish",
     "link:all": "npm run link:cli && npm run link:system && npm run link:ui && npm run link:jsx && npm run link:static",
     "link:cli": "node -e \"const path = require('path').resolve('./packages/cli/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/cli in package.json to:\\n', 'file://' + path)\"",
     "link:system": "node -e \"const path = require('path').resolve('./packages/system/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/system in package.json to:\\n', 'file://' + path)\"",
     "link:ui": "node -e \"const path = require('path').resolve('./packages/ui/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/ui in package.json to:\\n', 'file://' + path)\"",
     "link:jsx": "node -e \"const path = require('path').resolve('./packages/jsx/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/jsx in package.json to:\\n', 'file://' + path)\"",
-    "link:static": "node -e \"const path = require('path').resolve('./packages/static/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/static in package.json to:\\n', 'file://' + path)\"",
-    "migrate-to-npm": "node scripts/migrate-to-npm.js"
+    "link:static": "node -e \"const path = require('path').resolve('./packages/static/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/static in package.json to:\\n', 'file://' + path)\""
   },
   "author": "AJ Castello",
   "license": "MIT",
