--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,15 +54,16 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/jest": "^29.5.14",
+    "clsx": "^2.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.6",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "tailwind-merge": "^2.3.0"
   },
   "peerDependencies": {
-    "@jay-js/elements": "^1.0.0"
-  },
-  "dependencies": {
-    "tailwind-merge": "^2.3.0"
+    "@jay-js/elements": "^1.0.0",
+    "tailwind-merge": "^2.3.0",
+    "clsx": "^2.1.1"
   }
 }
