feat: inspector plugin

--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "build:cli": "nx build @jay-js/cli",
     "build:jsx": "nx build @jay-js/jsx",
     "build:static": "nx build @jay-js/static",
+    "build:elements": "nx build @jay-js/elements",
+    "build:inspector": "nx build @jay-js/inspector",
     "pub:all": "nx run-many -t publish --all",
     "pub:cli": "nx run @jay-js/cli:publish",
     "pub:system": "nx run @jay-js/system:publish",
     "pub:ui": "nx run @jay-js/ui:publish",
     "pub:jsx": "nx run @jay-js/jsx:publish",
     "pub:static": "nx run @jay-js/static:publish",
+    "pub:elements": "nx run @jay-js/elements:publish",
+    "pub:inspector": "nx run @jay-js/inspector:publish",
     "link:all": "npm run link:cli && npm run link:system && npm run link:ui && npm run link:jsx && npm run link:static",
     "link:cli": "node -e \"const path = require('path').resolve('./packages/cli/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/cli in package.json to:\\n', 'file://' + path)\"",
     "link:system": "node -e \"const path = require('path').resolve('./packages/system/dist').replace(/\\\\/g, '/'); console.log('\\x1b[36m%s\\x1b[0m','To use in another project:\\nChange the dependency path in @jay-js/system in package.json to:\\n', 'file://' + path)\"",
