--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -9,14 +9,23 @@
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js",
-    "./plugin": "./dist/plugin/index.js",
-    "./runtime": "./dist/runtime/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./plugin": {
+      "import": "./dist/plugin/index.js",
+      "types": "./dist/plugin/index.d.ts"
+    },
+    "./runtime": {
+      "import": "./dist/runtime/index.js",
+      "types": "./dist/runtime/index.d.ts"
+    }
   },
   "scripts": {
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
     "prebuild": "rimraf ./dist",
-    "build": "swc src -d dist --strip-leading-paths",
+    "build": "swc src -d dist --strip-leading-paths && npm run build:types",
     "postbuild": "cpy ./src/**/*.{css,html} ./dist && clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
