feat: add debug utilities and enhance inspector functionality with automatic debugging and UI updates

--- a/inspector/tsconfig.json
+++ b/inspector/tsconfig.json
@@ -12,8 +12,8 @@
 		"allowJs": true,
 		"forceConsistentCasingInFileNames": true,
 		"declaration": false,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"lib": [
 			"DOM",
 			"DOM.Iterable",
