feat: update TypeScript configuration files to include type definitions and ensure compatibility

--- a/packages/jsx/tsconfig.json
+++ b/packages/jsx/tsconfig.json
@@ -13,6 +13,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "types": ["jest", "node"],
     "paths": {
       "@jay-js/elements": [
         "../elements/src"
