--- a/packages/static/tsconfig.json
+++ b/packages/static/tsconfig.json
@@ -13,6 +13,8 @@
     "outDir": "./dist",
     "strict": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": ["./src/**/*","./src/index.ts"],
   "exclude": [
