--- a/inspector/package.json
+++ b/inspector/package.json
@@ -1,11 +1,11 @@
 {
   "name": "inspector-test",
   "version": "1.0.0",
-	"type": "module",
+  "type": "module",
   "scripts": {
-		"dev": "vite --mode development --host",
-		"build": "tsc && vite build --mode production",
-		"preview": "vite preview --mode production",
+    "dev": "vite --mode development --host",
+    "build": "tsc && vite build --mode production",
+    "preview": "vite preview --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,12 +13,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-		"@jay-js/elements": "file:../packages/elements/dist",
-		"@jay-js/system": "file:../packages/system/dist",
+    "@jay-js/elements": "file:../packages/elements/dist",
+    "@jay-js/system": "file:../packages/system/dist",
+    "@jay-js/ui": "file:../packages/ui/dist",
+    "@tailwindcss/vite": "^4.1.13",
+    "daisyui": "^5.1.25",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.5"
   },
-	"devDependencies": {
-		"@jay-js/inspector": "file:../packages/inspector/dist",
-		"typescript": "^5.7.3"
-	}
+  "devDependencies": {
+    "@jay-js/inspector": "file:../packages/inspector/dist",
+    "typescript": "^5.7.3"
+  }
 }
