chore(test): migrate @jay-js/jsx from Jest to Vitest
- remove jest config and Jest devDeps
- add vitest.config.ts, update test scripts and Vitest devDeps
- update tests to use vitest imports and vi mocking
- adjust tsconfig (moduleResolution, remove jest types, add esModuleInterop/allowSyntheticDefaultImports, exclude test patterns)
- update package.json peerDependencies and build ignore patterns
- document changes in CHANGELOG (1.2.2)

--- a/packages/jsx/tsconfig.json
+++ b/packages/jsx/tsconfig.json
@@ -6,14 +6,16 @@
       "ESNext",
       "DOM"
     ],
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "sourceMap": true,
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["jest", "node"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"],
     "paths": {
       "@jay-js/elements": [
         "../elements/src"
@@ -29,6 +31,11 @@
   ],
   "exclude": [
     "./node_modules",
-    "./dist"
+    "./dist",
+    "**/__tests__/**",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ]
 }
