--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -15,14 +15,15 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build:types": "tsc --emitDeclarationOnly --declaration --skipLibCheck",
-    "build": "swc src -d dist --strip-leading-paths && npm run build:types",
+    "build": "swc src -d dist --strip-leading-paths --ignore '**/__tests__/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx' && npm run build:types",
     "postbuild": "clean-package && cpy ./package.json ./dist && cpy ./README.md ./dist && clean-package restore",
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "biome check --write ./src",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "publishConfig": {
     "access": "public"
@@ -51,17 +52,17 @@
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
     "@biomejs/biome": "^2.2.3",
-    "@types/jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.4.5"
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "jsdom": "^25.0.1",
+    "typescript": "^5.4.5",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "@jay-js/elements": "file:../elements"
   },
   "peerDependencies": {
-    "@jay-js/ui": "^3.1.1",
-    "@jay-js/elements": "^1.1.0"
+    "@jay-js/ui": "^4.2.0",
+    "@jay-js/elements": "^1.2.0"
   }
 }
