chore(build): add test exclude to .swcrc and remove --ignore from swc build script

--- a/packages/jsx/.swcrc
+++ b/packages/jsx/.swcrc
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
+  "exclude": [".*__tests__.*", ".*\\.test\\.tsx?$", ".*\\.spec\\.tsx?$"],
   "module": {
     "type": "es6",
     "resolveFully": true
