--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -20,10 +20,10 @@
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "biome check --write ./src",
-    "test": "jest --verbose",
-    "test:full": "jest --verbose --coverage --coverageReporters=html --coverageReporters=text --collectCoverageFrom='src/**/*.{js,ts}'",
-    "test:cover": "jest --coverage --coverageReporters=html --collectCoverageFrom='src/**/*.{js,ts}'",
-    "test:watch": "jest --watch"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:cover": "vitest run --coverage",
+    "test:watch": "vitest"
   },
   "publishConfig": {
     "access": "public"
@@ -53,11 +53,10 @@
   "homepage": "https://github.com/AJCastello/jay-js#readme",
   "devDependencies": {
     "@biomejs/biome": "^2.2.3",
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.2.6",
+    "@vitest/ui": "^4.0.4",
+    "jsdom": "^27.0.1",
     "typescript": "^5.4.5",
+    "vitest": "^4.0.4",
     "yup": "^1.6.1",
     "zod": "^4.1.5"
   },
