chore(system): explicit console spy noop and update tsconfig for Vitest
- tests: use mockImplementation(() => {}) for console.warn/error spies to provide an explicit noop
- tsconfig: change moduleResolution to "Bundler", add "vitest/globals" to types, and enable skipLibCheck

--- a/packages/system/tsconfig.json
+++ b/packages/system/tsconfig.json
@@ -6,16 +6,18 @@
 			"ESNext",
 			"DOM"
 		],
-		"moduleResolution": "Node",
+		"moduleResolution": "Bundler",
 		"sourceMap": true,
 		"declaration": true,
 		"outDir": "./dist",
 		"strict": true,
 		"noImplicitAny": true,
 		"types": [
-			"node"
+			"node",
+			"vitest/globals"
 		],
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"skipLibCheck": true
 	},
 	"include": [
 		"./src/**/*",
