--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -30,8 +30,10 @@
     "pub": "cd ./dist && npm publish --access public",
     "typecheck": "tsc --noEmit",
     "lint": "biome check --write ./src",
-    "test": "jest --verbose",
-    "test:watch": "jest --watch"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:cover": "vitest run --coverage",
+    "test:watch": "vitest"
   },
   "publishConfig": {
     "access": "public"
@@ -71,11 +73,10 @@
     "@biomejs/biome": "^2.2.3",
     "@types/babel__parser": "^7.1.1",
     "@types/babel__traverse": "^7.20.4",
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.2.6",
+    "@vitest/ui": "^4.0.4",
+    "jsdom": "^27.0.1",
     "typescript": "^5.4.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^4.0.4"
   }
 }
