chore(docs,inspector): add rootDir to docs/tsconfig and remove unused @types/babel__parser devDependency

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -6,10 +6,12 @@
     "strict": true,
     "esModuleInterop": true,
     "sourceMap": true,
+		"skipLibCheck": true,
     "lib": [
       "DOM",
       "ESNext"
     ],
+		"rootDir": "./src",
     "outDir": "dist",
     "allowJs": true
   },
