--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -9,8 +9,19 @@
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/"
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./index.js"
+    },
+    "./jsx-runtime": {
+      "types": "./jsx-runtime.d.ts",
+      "default": "./jsx-runtime.js"
+    },
+    "./jsx-dev-runtime": {
+      "types": "./jsx-dev-runtime.d.ts",
+      "default": "./jsx-dev-runtime.js"
+    },
+    "./*": "./*"
   },
   "scripts": {
     "prebuild": "rimraf ./dist",
