--- a/package.json
+++ b/package.json
@@ -37,14 +37,10 @@
   "devDependencies": {
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.5",
-    "@swc/jest": "^0.2.39",
-    "@types/jest": "^29.5.0",
     "@types/node": "^22.13.10",
     "clean-package": "^2.2.0",
     "cpy-cli": "^5.0.0",
-    "jest": "^29.5.0",
     "nx": "21.4.1",
-    "rimraf": "^5.0.7",
-    "ts-jest": "^29.1.0"
+    "rimraf": "^5.0.7"
   }
 }
